<resources>
    <string name="app_label">Keaton Counting App</string>

    <!-- main page -->
    <string name="settings">Settings</string>
    <string name="event_1">EVENT ONE</string>
    <string name="event_2">EVENT TWO</string>
    <string name="event_3">EVENT THREE</string>
    <string name="show_my_counts">View Counts</string>
    <string name="total_count_label_zero">Total Count: 0</string>
    <string name="total_prefix">Total Count: %1$d</string>

    <!-- settings page -->
    <string name="counter1_name_label">Counter 1 Name</string>
    <string name="counter2_name_label">Counter 2 Name</string>
    <string name="counter3_name_label">Counter 3 Name</string>
    <string name="maximum_counts_label">Maximum Counts</string>
    <string name="hint_button1_name">Name goes here</string>
    <string name="hint_button2_name">Name goes here</string>
    <string name="hint_button3_name">Name goes here</string>
    <string name="hint_max_events">Max count goes here</string>
    <string name="save">Save</string>

    <!-- Database page -->
    <string name="counter1_events_placeholder">Counter 1: 0 events</string>
    <string name="counter2_events_placeholder">Counter 2: 0 events</string>
    <string name="counter3_events_placeholder">Counter 3: 0 events</string>
    <string name="total_events_placeholder">Total events: 0</string>
    <string name="count_item">%1$s: %2$d events</string>
    <string name="total_label">Total events: %1$d</string>
    <string name="button_num">%1$d</string>

    <!-- action bar -->
    <string name="edit_settings">Edit</string>
    <string name="toggle_event_names">Toggle name</string>
</resources>
