<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <!-- space -->
    <View
        android:layout_width="match_parent"
        android:layout_height="120dp" />

    <TextView
        android:id="@+id/countA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/counter1_events_placeholder"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/countB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/counter2_events_placeholder"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/countC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/counter3_events_placeholder"
        android:textSize="20sp" />

    <!-- space -->
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/totalCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total_events_placeholder"
        android:textSize="25sp" />
    <!-- space -->

    <View
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:layout_weight="1"
        android:dividerHeight="8dp" />

</LinearLayout>
